# getademo

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.http  LICENSE  README.md  docker-compose.http.yml  docker-compose.yml  install.sh  pyproject.toml
demo_recordings/google_account_creation/assets/: fill_google_signup.js
demo_recordings/google_maps_redhat/scripts/: voiceover_script.md
demo_recordings/kagenti_walkthrough/scripts/: voiceover_script.md
demo_recordings/kagenti_walkthrough/steps/: concat_list.txt
demo_recordings/openshift_walkthrough/scripts/: voiceover_script.md
docs/: getting-started.md
scripts/: run-mcp.sh  start-xvfb.sh  video-server.py
src/getademo/: __init__.py  protocol.py  server.py
src/recorder/: __init__.py  http_server.py  mcp_multiplexer.py  protocol.py  server.py  window_manager.py
src/recorder/backends/: base.py  container.py  host.py
src/recorder/tools/: windows.py
src/recorder/utils/: protocol.py  window_manager.py
tests/: test_server.py
