[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recorder"
version = "0.1.0"
description = "MCP server for creating professional demo videos with synchronized voiceover narration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Schimuneck", email = "schimuneck@users.noreply.github.com" }
]
keywords = [
    "mcp",
    "demo",
    "recording",
    "screen-recording",
    "tts",
    "text-to-speech",
    "video",
    "voiceover",
    "cursor",
    "ai-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "fastmcp>=2.0.0",
    "edge-tts>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
edge = ["edge-tts>=6.0"]
all = ["recorder[openai,edge]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
recorder = "recorder.server:run"
recorder-http = "recorder.transports.http:main"
recorder-proxy = "recorder.transports.multiplexer:main"

[project.urls]
Homepage = "https://github.com/Schimuneck/demo-recorder-mcp"
Documentation = "https://github.com/Schimuneck/demo-recorder-mcp#readme"
Repository = "https://github.com/Schimuneck/demo-recorder-mcp"
Issues = "https://github.com/Schimuneck/demo-recorder-mcp/issues"
Changelog = "https://github.com/Schimuneck/demo-recorder-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/recorder"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
